--- a/style.css
+++ b/style.css
@@ -44,3 +44,8 @@ body{
     font-size: 14px;
     font-family: "DM Sans", sans-serif;
 }
+
+.biblioteca {
+    text-decoration: none;
+    color: #b3b3b3;
+}
