--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ body{
     text-decoration: none;
     text-transform: none;
     padding: 20px 10px;
+    cursor: pointer;
 }
 
 .library .library__button .fa {
@@ -88,4 +89,119 @@ body{
 
 .library .library__content .fa-plus {
     margin: 24px 10px;
+    cursor: pointer;
+}
+
+.section-playlist {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    background-color: #242424;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 8px 0px;
+    padding: 16px 20px;
+    border-radius: 10px;
+}
+
+.section-playlist .section-playlist__content {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-playlist__content .text {
+    padding-bottom: 14px;
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+}
+
+.section-playlist__content .title {
+    font-weight: 700;
+}
+
+.section-playlist__content .subtitle {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist__content .section-playlist__button {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    border: 0px;
+    width: 113px;
+    margin-top: 12px;
+}
+
+.sidebar .cookies {
+    margin: 25px 20px;
+}
+
+.sidebar .cookies a {
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 10px;
+    text-decoration: none;
+}
+
+.sidebar .cookies a:hover {
+    text-decoration: underline;
+}
+
+.languages .languages__button {
+    background-color: transparent;
+    border: 1px solid #878787;
+    color: #fff;
+    cursor: pointer;
+    align-items: center;
+    font-weight: bold;
+    width: 170px;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 20px;
+}
+
+.footer {
+    background: linear-gradient(90deg, #af2896, #509bf5);
+    margin-top: 550px;
+    position: fixed;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    gap: 24px;
+    justify-content: space-between;
+    padding: 20px;
+    min-width: 620px;
+    height: auto;
+}
+
+.footer .footer__button {
+    padding: 8px 24px;
+    font-size: 16px;
+    text-decoration: none;
+    background-color: #fff;
+    color: #000;
+}
+
+.footer .text {
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+}
+
+.footer .title {
+    font-weight: 700;
+}
+
+.footer .subtitle {
+    font-weight: 400;
 }
